--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,18 @@
 Package: OSMdashboard
 Title: Creates OpenStreetMap-related Dashboards
 Version: 0.0.0.9000
-Authors@R: 
+Authors@R: c(
     person(
-      "Carlos", "Cámara-Menoyo", , "carlos.camara@warwick.ac.uk", 
+      "Carlos", "Cámara-Menoyo", email = "carlos.camara@warwick.ac.uk", 
       role = c("aut", "cre"),
       comment = c(ORCID = "0000-0002-9378-0549")
     ),
-    person("Timothy", "Monteath", 
+    person(
+      "Timothy", "Monteath", 
       email = "timothy.monteath@warwick.ac.uk", 
       role = "aut",
-      comment = c(ORCID = "0000-0003-2481-9785"),
+      comment = c(ORCID = "0000-0003-2481-9785")
+    ),
     person(
       "Selene", "Yang",
       role = "rev"
@@ -23,9 +25,12 @@ Authors@R:
       "Alejandra", "Canclini",
       role = "rev"
     )
+  )
 Description: What the package does (one paragraph).
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    license.
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+URL: https://github.com/ccamara/OSMdashboard
+BugReports: https://github.com/ccamara/OSMdashboard/issues
