--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,3 +33,9 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/ccamara/OSMdashboard
 BugReports: https://github.com/ccamara/OSMdashboard/issues
+Imports: 
+    dplyr,
+    osmapiR,
+    tidyr
+Suggests: 
+    sf
