--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,4 @@ export(create_dashboard)
 export(extract_and_combine_tags)
 export(get_changesets_details)
 export(get_contributions_changesets)
+export(get_contributions_osm_users)
