--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ export(get_contributions_changesets)
 export(get_contributions_diaries)
 export(get_contributions_osm_users)
 export(get_contributions_wiki)
+export(get_key_classification)
 export(stats_contributions_wiki)
