--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,6 +42,7 @@ RoxygenNote: 7.3.2
 URL: https://github.com/WarwickCIM/OSMdashboard, https://warwickcim.github.io/OSMdashboard/
 BugReports: https://github.com/WarwickCIM/OSMdashboard/issues
 Imports: 
+    cli,
     dplyr,
     lubridate,
     osmapiR,
