--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,7 +61,9 @@ Imports:
     stringr,
     tidyr,
     tidyRSS,
-    WikipediR
+    WikipediR,
+    glue,
+    stats
 Suggests: 
     knitr,
     rmarkdown,
