--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,7 +56,9 @@ Imports:
     stringr,
     tidyr,
     tidyRSS,
-    WikipediR
+    WikipediR,
+    glue,
+    stats
 Suggests: 
     knitr,
     rmarkdown,
