--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,7 +58,10 @@ Imports:
     tidyRSS,
     WikipediR,
     glue,
-    stats
+    stats,
+    tibble,
+    magrittr,
+    rlang
 Suggests: 
     knitr,
     rmarkdown,
