--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,21 @@ export(calc_stats_contributions_wiki)
 export(caption_group)
 export(categorise_keys)
 export(create_dashboard)
-export(describe_group)
 export(extract_and_combine_tags)
 export(get_changesets_details)
 export(get_contributions_diaries)
 export(get_contributions_osm_users)
 export(get_contributions_wiki)
 export(get_contributors_changesets)
-export(summarise_group_profile)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,count)
+importFrom(dplyr,desc)
+importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,rename_with)
+importFrom(dplyr,slice_head)
+importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
+importFrom(tibble,as_tibble)
+importFrom(tidyr,pivot_longer)
