Fixing R CMD check failures
Adding zzz files to declare fake variables so R CMD doesn't think we are using undefined variables.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -63,7 +63,10 @@ Imports:
     tidyRSS,
     WikipediR,
     glue,
-    stats
+    stats,
+    tibble,
+    magrittr,
+    rlang
 Suggests: 
     knitr,
     rmarkdown,
