Revert "Change to CMD-checks to avoid failing on non fatal warnings"
This reverts commit acacbcf37dc550473a84874cae0b04ab5cb54e6b.

Github action is generated by utils package to mimic R CMD checks, and therefore should not be altered.  If warnings or errors are shown, they need to be fixed instead.

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -47,9 +47,5 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v2
         with:
-          args: 'c("--no-manual","--as-cran","--no-examples")'
-          error-on: '"error"'
-        env:
-          _R_CHECK_FORCE_SUGGESTS_: "false"
-          R_REMOTES_NO_ERRORS_FROM_WARNINGS: "true"
-
+          upload-snapshots: true
+          build_args: 'c("--no-manual","--compact-vignettes=gs+qpdf")'
