Remove unnecessary imports from DESCRIPTION file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -63,12 +63,7 @@ Imports:
     tibble,
     tidyr,
     tidyRSS,
-    WikipediR,
-    glue,
-    stats,
-    tibble,
-    magrittr,
-    rlang
+    WikipediR
 Suggests: 
     knitr,
     rmarkdown,
